--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,7 +23,7 @@ jobs:
       - run: npm run build
       - run: npm test
 
-  delploy:
+  deploy:
     needs: ci
     if: ${{ github.event_name == 'push' }}
     runs-on: ubuntu-latest
